--- a/app/src/main/res/layout/order_items_layout.xml
+++ b/app/src/main/res/layout/order_items_layout.xml
@@ -1,25 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_content_menu"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:padding="5dp"
+    >
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:orientation="horizontal"
-        >
-        <TextView
-            android:id="@+id/tv_quantity"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/order_menu_item_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/noto_sans_bold"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:text="Traf sua vi dua tay " />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/order_menu_item_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2x"
-            />
-        <TextView
-            android:id="@+id/tv_menu_name"
-            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:text="x2" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/order_menu_item_price"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Pizza"
-            android:layout_marginStart="5dp"
+            android:layout_weight="1"
+            android:text="$10"
+            android:fontFamily="@font/noto_sans_bold"
+            android:gravity="center|end"
+            android:layout_gravity="center"
             />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
