--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.LoginActivity">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv1"
             android:layout_width="match_parent"
@@ -18,6 +14,7 @@
             android:layout_marginEnd="10dp"
             android:text="Login in to RestaurantTV"
             android:textSize="20sp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             android:textAlignment="center"
             app:fontFamily="@font/be_vietnam_bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -31,6 +28,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:text="Don't have an account?"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
             app:fontFamily="@font/noto_sans"
             app:layout_constraintStart_toStartOf="@+id/tv1"
             app:layout_constraintTop_toBottomOf="@id/tv1" />
@@ -42,42 +40,68 @@
             android:layout_marginStart="5dp"
             android:fontFamily="@font/noto_sans"
             android:text="Sign up now"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
             android:textColor="#30CC36"
             app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintStart_toEndOf="@+id/textView" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_sign_google"
-            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
-            android:layout_width="wrap_content"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/social_login_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Google"
-            android:layout_marginTop="15dp"
-            app:icon="@drawable/ic_google"
-            app:cornerRadius="4dp"
-            app:strokeColor="#000000"
-            app:strokeWidth="1dp"
-            android:textColor="@color/black"
-            app:backgroundTint="@color/white"
+            android:layout_marginTop="32dp"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="0dp"
+            android:layout_marginHorizontal="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_register" />
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_sign_github"
-            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Github"
-            android:layout_marginTop="15dp"
-            app:icon="@drawable/ic_github"
-            app:cornerRadius="4dp"
-            app:strokeColor="#000000"
-            app:strokeWidth="1dp"
-            android:textColor="@color/black"
-            app:backgroundTint="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_sign_google" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_register"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp"
+                >
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_sign_google"
+                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:text="Continue with Google"
+                    android:textAlignment="center"
+                    android:textAllCaps="false"
+                    android:textColor="@color/text_primary"
+                    app:cornerRadius="8dp"
+                    app:icon="@drawable/ic_google"
+                    app:iconGravity="textStart"
+                    app:iconPadding="12dp"
+                    app:iconSize="24dp"
+                    app:iconTint="@null"
+                    app:strokeColor="@color/gray"
+                    app:strokeWidth="1dp" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_sign_github"
+                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:layout_marginTop="12dp"
+                    android:text="Continue with Github"
+                    android:textAlignment="center"
+                    android:textAllCaps="false"
+                    android:textColor="@color/text_primary"
+                    app:cornerRadius="8dp"
+                    app:icon="@drawable/ic_github"
+                    app:iconGravity="textStart"
+                    app:iconPadding="12dp"
+                    app:iconSize="24dp"
+                    app:iconTint="@null"
+                    app:strokeColor="@color/gray"
+                    app:strokeWidth="1dp"  />
+
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
 
         <TextView
             android:id="@+id/tv3"
@@ -88,43 +112,59 @@
             android:text="Or with email and password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_sign_github" />
+            app:layout_constraintTop_toBottomOf="@id/social_login_container" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout_email"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="16dp"
             android:hint="Email"
+            android:layout_marginHorizontal="10dp"
+            app:boxCornerRadiusBottomEnd="8dp"
+            app:boxCornerRadiusBottomStart="8dp"
+            app:boxCornerRadiusTopEnd="8dp"
+            app:boxCornerRadiusTopStart="8dp"
+            app:endIconMode="clear_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv3">
+            app:layout_constraintTop_toBottomOf="@id/tv3"
+            app:startIconDrawable="@android:drawable/ic_dialog_email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/textfield_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:padding="16dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout_password"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:hint="Password"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="10dp"
+            app:boxCornerRadiusBottomEnd="8dp"
+            app:boxCornerRadiusBottomStart="8dp"
+            app:boxCornerRadiusTopEnd="8dp"
+            app:boxCornerRadiusTopStart="8dp"
+            app:endIconMode="password_toggle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_input_layout_email">
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_email"
+            app:startIconDrawable="@drawable/ic_lock">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/textfield_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:padding="16dp"
                 />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -169,12 +209,14 @@
             app:strokeColor="#000000"
             app:strokeWidth="1dp" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-   <ProgressBar
-       android:id="@+id/progress_bar"
-       android:layout_width="48dp"
-       android:layout_height="48dp"
-       android:layout_centerInParent="true"
-       android:visibility="gone"
-       />
-</RelativeLayout>
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
