fix ui login UI/UX standards

--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -179,6 +179,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/support_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
