add ui provisional bill

--- a/app/src/main/res/layout/activity_menu_item.xml
+++ b/app/src/main/res/layout/activity_menu_item.xml
@@ -40,6 +40,7 @@
             android:id="@+id/menu_item_rec"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            tools:listitem="@layout/item_menu"
              />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
