--- a/app/src/main/res/layout/order_menu_payment_item.xml
+++ b/app/src/main/res/layout/order_menu_payment_item.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
-    android:background="@drawable/background_order_menu"
+
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,8 +23,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/noto_sans_bold"
-            android:gravity="center"
-            android:layout_gravity="center"
             android:text="Traf sua vi dua tay " />
 
         <com.google.android.material.textview.MaterialTextView
@@ -45,6 +43,9 @@
             android:layout_gravity="center"
             />
     </LinearLayout>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#EEEEEE" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
