--- a/app/src/main/res/layout/activity_order_payment.xml
+++ b/app/src/main/res/layout/activity_order_payment.xml
@@ -480,6 +480,15 @@
                 app:iconPadding="8dp"
                 app:layout_constraintTop_toBottomOf="@id/payment_methods_container" />
 
+            <FrameLayout
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/btn_pay"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="16dp" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
