--- a/app/src/main/res/layout/order_menu_payment_item.xml
+++ b/app/src/main/res/layout/order_menu_payment_item.xml
@@ -9,13 +9,16 @@
     android:padding="10dp"
 
     >
+
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="18dp">
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/order_menu_item_name"
@@ -29,23 +32,28 @@
             android:id="@+id/order_menu_item_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_gravity="center"
+            android:gravity="center"
             android:text="x2" />
+
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/order_menu_item_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="$10"
             android:fontFamily="@font/noto_sans_bold"
             android:gravity="center|end"
-            android:layout_gravity="center"
-            />
+            android:text="$10" />
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#EEEEEE" />
+        android:background="#EEEEEE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
